<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/DetailActivityView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:accessibilityLiveRegion="assertive"
    android:background="#43DADADF"
    android:importantForAccessibility="auto"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageViewPhoto"
        android:layout_width="411dp"
        android:layout_height="253dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <ImageButton
        android:id="@+id/imageButtonBack"
        android:layout_width="64dp"
        android:layout_height="58dp"
        android:layout_marginTop="16dp"
        android:adjustViewBounds="true"
        android:alpha="0.9"
        android:background="?attr/actionModeCloseDrawable"
        android:backgroundTint="#FFFFFF"
        android:contentDescription="@string/activity_new_neighbour"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.043"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="354dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewPhoto">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:background="@android:color/white"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <View
                android:id="@+id/divider8"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/textViewNeighbourName2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:outlineAmbientShadowColor="@color/cardview_light_background"
                android:padding="10dp"
                android:shadowColor="@android:color/darker_gray"
                android:text="Neighbour Name"
                android:textColor="@android:color/black"
                android:textSize="22sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"

            android:orientation="vertical">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/baseline_location_on_24" />

                <TextView
                    android:id="@+id/textViewAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:text="textViewAddress"
                    android:textSize="20sp" />
            </TableRow>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"

            android:orientation="vertical">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/imageView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/baseline_local_phone_24" />

                <TextView
                    android:id="@+id/textViewPhoneNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:text="textViewPhoneNumber"
                    android:textSize="20sp" />
            </TableRow>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:background="@android:color/white"
            android:orientation="vertical"
            android:outlineSpotShadowColor="@android:color/background_dark">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/imageView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/baseline_language_24" />

                <TextView
                    android:id="@+id/textViewSocialProfil"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:textSize="20sp" />
            </TableRow>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/textViewNeighbourName1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="Neighbour Name"
        android:textColor="@android:color/white"
        android:textSize="36dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewPhoto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButtonBack"
        app:layout_constraintVertical_bias="0.94" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButtonFavoris"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="220dp"
        android:layout_marginEnd="16dp"
        android:clickable="true"
        android:contentDescription="@string/fab_favorites"
        android:focusable="auto"
        android:focusableInTouchMode="false"
        android:src="@drawable/ic_star_border_white_24dp"
        app:backgroundTint="#F6E5C1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textViewNeighbourName1"
        app:layout_constraintTop_toTopOf="parent"
        app:rippleColor="#FAF6F6" />

    <RelativeLayout
        android:layout_width="353dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:id="@+id/textViewAboutMeTitre"
            style="@style/MaterialAlertDialog.Material3.Title.Text"
            android:layout_width="348dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="10dp"
            android:text="A propos de moi"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textViewNeighbourAboutMe"
            android:layout_width="358dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewAboutMeTitre"
            android:layout_marginTop="13dp"
            android:padding="10dp"
            android:text="" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

